--- a/blog.css
+++ b/blog.css
@@ -160,3 +160,9 @@ footer{
         font-size: .8rem;
     }
 }
+@media (max-width:450px) {
+    .contact-container{
+        flex-direction: column;
+        gap: 20px;
+       }
+}
